2005-09-01  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-OfficeJet_4100.xml, printer/HP-OfficeJet_4200.xml,
	  printer/HP-OfficeJet_5500.xml, printer/HP-OfficeJet_5600.xml,
	  printer/HP-OfficeJet_6100.xml, printer/HP-OfficeJet_6150.xml,
	  printer/HP-OfficeJet_6200.xml, printer/HP-OfficeJet_7100.xml,
	  printer/HP-OfficeJet_7200.xml, printer/HP-OfficeJet_7300.xml,
	  printer/HP-OfficeJet_7400.xml, printer/HP-PSC_1300.xml,
	  printer/HP-PSC_1510.xml, printer/HP-PSC_1600.xml,
	  printer/HP-PSC_2170.xml, printer/HP-PSC_2300.xml,
	  printer/HP-PSC_2350.xml, printer/HP-PSC_2400.xml,
	  printer/HP-PSC_2500.xml: Corrected SANE links.

	* printer/HP-PSC_1510.xml: Added HP PSC 1510.

2005-08-29  George Liu <george.liu@ussj.ricoh.com>

	* Started to integrate manufacture-PPD into foomatic-db. 
	  Created db/source/PPD directory
	  Copied Ricoh Family and OEM PPD files into db/source/PPD.
	  There're 460 PPD files for 324 printer models.

	* Updated printer XML files for Ricoh Family and OEM PPD files.
	  Each printer xml file has a <drivers> section to point to PPD,

	* Merged Postscript printer entry into non-PS printer entry.
	  Printers with Postscript option support both PS and PXL drivers.

2005-08-24  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-LaserJet_4250.xml: Fixed link to the PPD file.

	* driver/ljet4.xml, driver/lj4dith.xml, opt/12.xml, opt/2.xml,
	  opt/6.xml, opt/GS-HalftoningAlgorithm-Gray.xml,
	  opt/PCL-4-5-InputSlot.xml: Separated the "ljet4" and "lj4dith"
	  drivers from each other (not one PPD for both any more), as
	  "lj4dith" has a margin problem.

2005-08-15  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/pxlmono.xml, driver/pxl1010.xml, driver/lj5gray.xml:
	  Fixed Perl one-liner to select the paper tray. It inserted the
	  paper tray code also in wrong places and so broke the
	  data. Thanks to Jonathan Kamens (jik at kamens dot brookline dot
	  ma dot us) for the patch.

2005-08-04  Till Kamppeter <till.kamppeter@gmx.net>