@@ -27,7 +27,16 @@
     </text>
   </lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <general>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>hp LaserJet 4200</model>
+      <description>Hewlett-Packard LaserJet 4200</description>
+      <commandset>PJL,MLC,POSTSCRIPT,PJL,PCLXL,PCL</commandset>
+    </general>
+    <snmp>
+      <description>hp LaserJet 4200</description>
+    </snmp>
+  </autodetect>
   <functionality>A</functionality>
   <driver>Postscript</driver><!--verified--><!--no "contrib_url"-->
   <comments>
