@@ -1,3 +1,8 @@
+2005-09-05  Tim Waugh  <twaugh@redhat.com>
+
+	* printer/HP-LaserJet_4200.xml: Added IEEE 1284 information (RH
+	  bug #166638).
+
 2005-09-01  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/HP-OfficeJet_4100.xml, printer/HP-OfficeJet_4200.xml,
